--- a/index.html
+++ b/index.html
@@ -3,9 +3,20 @@
   <head><link rel="stylesheet" href="style.css" />
     <title>My Website</title>
 <title>My Personal Website</title>
+<div class="topnav" id="myTopnav">
+  <a href="#home" class="active">HOME</a>
+  <a href="#Education">EDUCATION</a>
+  <a href="#skills">SKILLS</a>
+  <a href="#contactt">CONTACT</a>
+  <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+    <i class="fa fa-bars"></i>
+  </a>
+</div>
+<img src="ll.jpg" alt="HTML5 Icon" width="200" height="200">
 </head>
   <body>
-    <h1>Hello, Welcome to my portfolio.</h1>
+    <h1>DOMNIC OMONDI</h1>
+    <h2>Software engineer</h2>
     <script src="script.js"></script>
   </body>
 </html>
