--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
   </header>
 <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
-      <h1>Domnic Omondi</h1>
+      <h1 style="color: black;">Domnic Omondi</h1>
       <p>Software Engineer<span class="typed" data-typed-items=></span></p>
     </div>
   </section>
@@ -77,7 +77,7 @@
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
             <h3>Software Engineer(fullstack Developer).</h3>
             <p class="fst-italic">
-           <br> Front-end web development(HTML,CSS,JAVASCRIPT,NODE.JS) </br>
+           <br> Front-end web development(HTML,CSS,JAVASCRIPT,REACT) </br>
            <br>Back-end web development(JAVASCRIPT, RUBY, RAILS, REACT)</br>
             
             </p>
@@ -190,27 +190,27 @@
             </div>
           </div>
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
-            <h3 class="resume-title">Professional Experience</h3>
+            <h3 class="resume-title">Front-end experience</h3>
             <div class="resume-item">
               <h4></h4>
               <h5></h5>
               <p><em></em></p>
               <ul>
-                <li></li>
-                <li> </li>
-                <li></li>
-                <li></li>
+                <li>HTML</li>
+                <li>CSS</li>
+                <li>JAVASCRIPT</li>
+                <li>REACT</li>
               </ul>
             </div>
             <div class="resume-item">
-              <h4>Front-end web designer</h4>
+              <h4>Back-end experience</h4>
               <h5></h5>
               <p><em></em></p>
               <ul>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
+                <li>HTML</li>
+                <li>CSS</li>
+                <li>JAVASCRIPT</li>
+                <li>REACT</li>
               </ul>
             </div>
           </div>
