--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
             <div class="row">
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>24 July 1997</span></li>
+                  <!-- <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>24 July 1997</span></li> -->
                   <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>domooh9@gmail.com</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+254710809487</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Country:</strong> <span>Kenya</span></li>
@@ -100,7 +100,7 @@
               </div>
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>25</span></li>
+                  <!-- <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>25</span></li> -->
                   <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Bachelors</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>domooh9@gmail.com</span></li>
                   
@@ -354,28 +354,28 @@
               <div class="social-media">
                 <div class="handle">
                   <a href="https://www.facebook.com/wuodomondi.dom" target="_blank">
-                    <i class="fa fa-facebook"></i>
+                  <i class="bi bi-facebook"></i>
                   </a>
                 </div>
                 <div class="handle">
                   <a href="https://twitter.com/DomnicRobert" target="_blank">
-                    <i class="fa fa-twitter"></i>
+                    <i class="bi bi-twitter"></i>
                   </a>
                 </div>
                 <div class="handle">
                   <a href="https://www.instagram.com/dom.3064776/" target="_blank">
-                    <i class="fa fa-instagram"></i>
+                    <i class="bi bi-instagram"></i>
                   </a>
                 </div>
               
                 <div class="handle">
                   <a href="https://www.linkedin.com/in/domnic-omondi-60a002130/" target="_blank">
-                    <i class="fa fa-linkedin"></i>
+                    <i class="bi bi-linkedin"></i>
                   </a>
                 </div>
                 <div class="handle">
                   <a href="https://github.com/domooh9" target="_blank">
-                    <i class="fa fa-github"></i>
+                    <i class="bi bi-github"></i>
                   </a>
                 </div>
               </div>
