--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 
         <div class="row">
           <div class="col-lg-4" data-aos="fade-right">
-            <img src="assets/img/ll.jpg" class="img-fluid" alt="">
+            <img src="assets/img/pp.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
             <h3>Software Engineer(fullstack Developer).</h3>
@@ -358,7 +358,7 @@
                   </a>
                 </div>
                 <div class="handle">
-                  <a href="https://twitter.com/DomnicRobert" target="_blank">
+                  <a href="https://twitter.com/Domnic_dev?t=SeY3wZzZKKGCSi3Gv1tVDw&s=09" target="_blank">
                     <i class="bi bi-twitter"></i>
                   </a>
                 </div>
