--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
 
         <div class="section-title">
           <h2>Resume</h2>
-          <p><a href ="cv.pdf" attributes-list download ="curriculum-vitae" >Download Resume</a></p>  
+          <p><a href ="cv.pdf" attributes-list download ="curriculum-vitae" >download <i class="bi bi-download"></i></a></p>  
         </div>
 
         <div class="row">
