--- a/index.html
+++ b/index.html
@@ -31,23 +31,21 @@
 </head>
 
 <body>
-
   <!-- ======= Mobile nav toggle button ======= -->
   <i class="bi bi-list mobile-nav-toggle d-xl-none"></i>
 
   <!-- ======= Header ======= -->
   <header id="header">
     <div class="d-flex flex-column">
-
-      <div class="profile">
+    <div class="profile">
         <img src="assets/img/ll.jpg" alt="" class="img-fluid rounded-circle">
         <h1 class="text-light"><a href="index.html">Domnic Omondi</a></h1>
-        <div class="d-flex justify-content-center mt-4">
-          <a href="mailto:domooh9@gmail.com" class="btn btn-outline-primary me-2 bg-dark">
+        <div class="d-flex justify-content-sm-center mt-sm-2">
+          <a href="mailto:domooh9@gmail.com" id= "bt" class="btn btn-outline-primary me-2 bg-dark">
             <i class="bi bi-envelope"></i>
             Email
           </a>
-          <a href="tel:+254710809487" class="btn btn-outline-primary bg-dark">
+          <a href="tel:+254710809487" id= "bt" class="btn btn-outline-primary bg-dark">
             <i class="bi bi-telephone"></i>
             Call
           </a>
