adding book app live link

--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
                   <h3 class="card-title">Book Review App</h3>
                   <img src="assets/img/book.png" class="card-img-top" alt="Unsplash Image">
                   <p class="card-text lead" id="card-text">Looking for your next great read? Search for a book using the OpenBook API with this sleek and modern single-page application built using React.</p>
-                  <p class="card-text"><em><a href="https://bookk-review-app.herokuapp.com/book" target="_blank" rel="noopener noreferrer">Explore it now</a></em></p>
+                  <p class="card-text"><em><a href="https://main--ubiquitous-sunburst-3d759a.netlify.app/" target="_blank" rel="noopener noreferrer">Explore it now</a></em></p>
                 </div>
               </div>
             </div>
