--- a/index.html
+++ b/index.html
@@ -89,10 +89,23 @@
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
             <h3>Software Engineer.</h3>
             <p class="fst-italic">
-           <br> Front-end web development(React,JavaScript,HTML,CSS/Tailwind,Bootstrap) </br>
-           <br>Back-end web development(Ruby, Rails, PostgreSQL)</br>
-            
-            </p>
+           <br> As a full stack software developer, I have expertise in both front-end and back-end web development. 
+                In front-end web development, I specialize in working with React, JavaScript, Nextjs, and
+                Typescript. I have experience in creating responsive and scalable
+                web applications using React and integrating it with other technologies 
+                such as zustand and GraphQL. 
+                I am also proficient in HTML and CSS and have used popular 
+                CSS frameworks like Tailwind and Bootstrap.</br>
+           <br>In addition to front-end web development, 
+               I am skilled in back-end web development technologies such as Ruby, Rails, and PostgreSQL
+               Ruby is a dynamic programming language, and Rails is 
+               a popular web application framework known for its quick development cycle. 
+               PostgreSQL is a powerful open-source database management
+               system that I have used for storing and managing data
+               I am committed to building scalable and high-quality web applications 
+               by leveraging my expertise in both front-end and back-end web development.
+            </br>
+             </p>
             <div class="row">
               <div class="col-lg-6">
                 <ul>
@@ -106,7 +119,7 @@
                 <ul>
                   <!-- <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>25</span></li> -->
                   <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Bachelors</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>domooh9@gmail.com</span></li>
+                  <!-- <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>domooh9@gmail.com</span></li> -->
                   
                 </ul>
               </div>
@@ -205,7 +218,7 @@
 
         <div class="section-title">
           <h2>Resume</h2>
-          <p><a href ="cv.pdf" attributes-list download ="curriculum-vitae" >download <i class="bi bi-download"></i></a></p>  
+          <!-- <p><a href ="cv.pdf" attributes-list download ="curriculum-vitae" >download <i class="bi bi-download"></i></a></p>   -->
         </div>
 
         <div class="row">
@@ -241,11 +254,11 @@
             <div class="resume-item">
                <p><em>I design simple and dynamic websites using the following technologies:</em></p>
               <ul>
-                <li>HTML</li>
-                <li>CSS/Tailwind </li>
-                <li>JavaScript</li>
-                <li>React</li>
+                <li>JavaScript/Typescript</li>
+                <li>Reactjs/Nextjs</li>
                 <li>Bootstrap</li>
+                <li>HTML</li>
+                <li>Tailwind CSS</li>
               </ul>
             </div>
             <div class="resume-item">
@@ -287,6 +300,16 @@
                   <h3 class="card-title">Book Review App</h3>
                   <img src="assets/img/book.png" class="card-img-top" alt="Unsplash Image">
                   <p class="card-text lead" id="card-text">Looking for your next great read? Search for a book using the OpenBook API with this sleek and modern single-page application built using React.</p>
+                  <p class="card-text"><em><a href="https://main--ubiquitous-sunburst-3d759a.netlify.app/" target="_blank" rel="noopener noreferrer">Explore it now</a></em></p>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-6" data-aos="fade-up">
+              <div class="card mb-4">
+                <div class="card-body">
+                  <h3 class="card-title">iReporter</h3>
+                  <img src="assets/img/ir.png" class="card-img-top" alt="Unsplash Image">
+                  <p class="card-text lead" id="card-text">With the iREPORTER web application registered users are given a platform to expose any kind of information or activity that is deemed illegal, unethical or not correct in the eyes of society.</p>
                   <p class="card-text"><em><a href="https://main--ubiquitous-sunburst-3d759a.netlify.app/" target="_blank" rel="noopener noreferrer">Explore it now</a></em></p>
                 </div>
               </div>
