--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
   <title>Domnic</title>
+  <link rel="icon" href="assets/img/logo.png" sizes="38x38">
   <meta content="" name="description">
   <meta content="" name="keywords">
 
